# gputreeshap

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile.in  README.md  build.sh  dependencies.yaml  fetch_rapids.cmake
.github/: CODEOWNERS  ops-bot.yaml
.github/workflows/: pr.yaml
GPUTreeShap/: gpu_treeshap.h
benchmark/: benchmark.py  benchmark_gpu_treeshap.cu  format_results.py
ci/: build_and_test.sh  check_style.sh
ci/checks/: style.sh
ci/gpu/: build.sh
ci/release/: update-version.sh
cmake/: RAPIDS.cmake  doxygen.cmake  rapids_config.cmake
example/: example.cu
tests/: test_gpu_treeshap.cu  test_utils.h
